# demo-hub

./: .dockerignore  .env.example  .gitignore  .gitmodules  LICENSE  Makefile  README.md  docker-compose.compute.yml  docker-compose.yml
services/common/: README.md  pyproject.toml
services/common/auth/: __init__.py  dependencies.py  jwks.py  models.py
services/common/config/: settings.py
services/common/database/: __init__.py  alembic.ini  config.py  core.py  dependencies.py  middleware.py  models.py
services/common/database/migrations/: env.py
services/common/domain/: enums.py
services/common/logging/: config.py
services/common/middleware/: exception.py
services/common/rabbitmq/: __init__.py  config.py  connection.py  consumer.py  publisher.py
services/common/redis/: __init__.py  client.py  config.py  rate_limit.py
services/common/s3/: client.py  config.py  dependencies.py
services/common/tests/: .env.example  README.md  e2e_recast_pipeline_test.py  pyproject.toml
services/compute/: .env.example  Dockerfile  README.md  main.py  pyproject.toml  runpod.dockerfile
services/compute/app/: config.py
services/compute/app/pipelines/: consumer.py  pipelines.py  router.py  schemas.py  service.py
services/compute/tests/: conftest.py  test_schemas.py  test_service_factory.py
services/core/: .env.example  Dockerfile  README.md  main.py  pyproject.toml
services/core/app/: config.py  dependencies.py
services/core/app/auth/: router.py
services/core/app/pipelines/: consumer.py  models.py  router.py  schemas.py  service.py
services/core/app/recast/: models.py  router.py  schemas.py  service.py
services/core/tests/: conftest.py  test_pipelines_api.py  test_pipelines_service.py  test_recast_service.py
(+50 files in other folders)
