[project]
name = "inference"
version = "0.1.0"
description = "inference"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "face_swap",
    "common",
    "sentry-sdk>=2.42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[tool.uv.sources]
common = { path = "../common", editable = true }
face_swap = { path = "../external/face_swap", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
