[project]
name = "core"
version = "0.1.0"
description = "Core service"
requires-python = ">=3.11"
dependencies = [
    "common",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.11",
    "sentry-sdk[fastapi]>=2.42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
]

[tool.uv.sources]
common = { path = "../common", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
